# pico-aq-monitor

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
src/: leds.rs  main.rs  network.rs  types.rs
src/sensors/: aht20.rs  bmp280.rs  mod.rs  scd40.rs
