[package]
name = "ens160-air-quality"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "ENS160 air quality sensor on Raspberry Pi Pico W"

[dependencies]
# Embassy framework (git dependencies for latest APIs)
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy" }
cyw43 = { git = "https://github.com/embassy-rs/embassy", features = ["defmt", "firmware-logs"] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }

# Sensor driver
ens160-aq = { version = "0.2.11", default-features = false, features = ["async"] }

# Logging
defmt = "1.0.1"
defmt-rtt = "1.0.0"
log = "0.4"

# Embedded essentials
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
embedded-hal-async = "1.0"
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }

[profile.release]
debug = true
