[package]
name = "ens160-air-quality"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "ENS160 air quality sensor on Raspberry Pi Pico W"

[dependencies]
# Embassy framework (crates.io)
embassy-embedded-hal = { version = "0.5.0", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.9.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embassy-usb-logger = "0.5.1"

# CYW43 WiFi chip (for Pico W onboard LED)
cyw43 = { version = "0.6.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.9.0", features = ["defmt"] }
cyw43-firmware = { version = "0.1.0", features = ["wifi"] }

# Sensor drivers
ens160-aq = { version = "0.2.11", default-features = false, features = ["async"] }
bme280-rs = "0.3"

# Logging
defmt = "1.0.1"
defmt-rtt = "1.0.0"
log = "0.4"

# Embedded essentials
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
embedded-hal-async = "1.0"
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }

[profile.release]
debug = true
